creator stats
