# routes/content_creators.go
@@ -18,6 +18,7 @@ func ContentCreatorsRoutes(r *gin.Engine) {
 		// Routes admin
 		contentCreatorRoutes.GET("/all", middleware.AdminAuth(), content_creators.GetAllContentCreators)
 		contentCreatorRoutes.PUT("/:id/status", middleware.AdminAuth(), content_creators.UpdateContentCreatorStatus)
-		contentCreatorRoutes.GET("/stats/creator", content_creators.GetCreatorStats)
+		contentCreatorRoutes.GET("/stats-general/creator", content_creators.GetCreatorStats)
+		contentCreatorRoutes.GET("/stats-advenced/creator", content_creators.GetAdvencedStats)
 	}
 }
